--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>WordStream the great</title>
+  <title>WordStream2</title>
   <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
 </head>
